examenes/2017Q2 - 2do parcial/Otero/firewall.conf
# Generated by iptables-save v1.4.21 on Wed Nov 15 22:19:13 2017
*nat
:PREROUTING ACCEPT [362:42747]
:INPUT ACCEPT [2:120]
:OUTPUT ACCEPT [43:12048]
:POSTROUTING ACCEPT [0:0]
-A POSTROUTING -o eth0 -j MASQUERADE
COMMIT
# Completed on Wed Nov 15 22:19:13 2017
# Generated by iptables-save v1.4.21 on Wed Nov 15 22:19:13 2017
*filter
:INPUT DROP [72:12096]
:FORWARD DROP [0:0]
:OUTPUT DROP [6:940]
-A INPUT -i lo -j ACCEPT
-A INPUT -s 192.168.20.8/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -s 192.168.20.3/32 -i eth2 -o eth0 -j ACCEPT
-A FORWARD -d 192.168.20.3/32 -i eth0 -o eth2 -j ACCEPT
-A FORWARD -i eth0 -o eth1 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i eth0 -o eth2 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i eth2 -o eth0 -p tcp -m tcp --dport 80 -j ACCEPT
-A FORWARD -j DROP
-A FORWARD -i eth2 -o eth0 -p tcp -m tcp --dport 443 -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -p tcp -j ACCEPT
-A OUTPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
COMMIT
# Completed on Wed Nov 15 22:19:13 2017
